# prec_ctrl

./: README.md  copyright  prec_ctrl.doxygen
include/: FixedPoint.h  FixedPointComplex.h  double_limit.h  fixed_numeric.h
include/FixedPoint/: limit.h  significand.h
test/: CMakeLists.txt  FixedPoint.cpp  FixedPointComplex.cpp  double_limit.cpp  equivalence.cpp  fixed_numeric.cpp  meson.build  meson_options.txt
